# TensorRT-LLM

./: .gitmodules  README.md  requirements-dev.txt
cpp/: CMakeLists.txt
cpp/tensorrt_llm/: CMakeLists.txt
cpp/tensorrt_llm/nanobind/: CMakeLists.txt  bindings.cpp
cpp/tensorrt_llm/nanobind/executor/: bindings.cpp  bindings.h  request.cpp  request.h
examples/disaggregated/slurm/benchmark/: disaggr_torch.slurm  run_benchmark.sh  start_server.sh  start_worker.sh
scripts/: build_wheel.py
tensorrt_llm/_torch/pyexecutor/: py_executor.py
